--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@ a:active {
     <p>Discord</p>
     </span>
     </a>
+    <a href="https://www.paypal.com/pools/c/86MgjdiOoE">
+    <span class="baffle">
+    <p>Donate</p>
+    </span>
+    </a>
 </div>
 <script>
     let b = baffle('.baffle').start();
