--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ html, body {
     margin: 0;
     height: 100%;
     overflow: hidden;
+    background-color: white;
     cursor: url('cursor.png'), default;
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
