--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ a:active {
 </style>
 
 <head>
+<meta name="google-site-verification" content="p5-vg0kfM7Z2cAb3-hYgCCTKIRuQWUDfLs_T7JaI1Zc" />
 <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
 <meta name="description" content="The non-gay Gays on Sunshine clan.">
