--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@ html, body {
     margin: 0;
     height: 100%;
     overflow: hidden;
-    background-color: white;
+    //background-color: white;
     cursor: url('cursor.png'), default;
+    background-image: url ("https://i.huffpost.com/gen/1371973/thumbs/o-RAINBOW-HAWAII-900.jpg?2");
+    background-repeat: no-repeat;
+    background-size: auto;
+    
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE10+/Edge */
